create test Person()

--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-      <title>Shape Tracker</title>
+      <title>Galactic Age Calculator</title>
 </head>
 <body>
+  <h1>Header</h1>
   <h3>Enter three lengths to determine if they can make a triangle.</h3>
   <img class="img-fluid" src="./assets/images/stock-puppy-photo.jpg" alt="brown dog"/>
   <form id="triangle-checker-form">
