--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,9 @@
 <html lang="en-US">
 
 <head>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk&display=swap" rel="stylesheet">
   <title>Galactic Age Calculator</title>
 </head>
 
@@ -12,13 +15,17 @@
   <h3>Let's see how old you would be based on other planet's solar years</h3>
   <form id="age-form">
     <label for="nameInput">Enter your name:</label>
-    <input id="nameInput" type="text">
+    <input id="nameInput" type="text" placeholder="Laika">
+    <br>
     <label for="ageInput">Enter your age:</label>
     <input id="ageInput" type="number">
+    <br>
     <label for="agePast">Enter a past age to see how many birthdays have happened between then and now:</label>
     <input id="agePast" type="number">
+    <br>
     <label for="ageFuture">Enter a future age to see how many birthdays have yet to happen between then and now:</label>
     <input id="ageFuture" type="number">
+    <br>
     <button type="submit">Blast off!</button>
   </form>
     <img class="img-fluid" src="./assets/images/animal.webp" alt="animals in space" />
