add styling changes

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <div class="container">
-  <img class="img-fluid text-center" src="./assets/images/solarSystem.jpg" alt="planets in solar sytem"/>
+  <img class="img-fluid text-center" id="solarSystem" src="./assets/images/solarSystem.jpg" alt="planets in solar sytem"/>
   <h1>How old are you really?</h1>
   <h3>Let's see how old you would be based on other planet's solar years</h3>
   <form id="age-form">
