second card responsive on UI

--- a/src/index.html
+++ b/src/index.html
@@ -30,10 +30,16 @@
       <br>
       <button type="submit" class="btn btn-primary">Blast off!</button>
     </form>
-    <div class="card" style="width: 20rem;">
-      <div id="responseCurrent" class="card-text"></div>
-      <div id="responsePast" class="card-text"></div>
-      <div id="responseFuture" class="card-text"></div>
+    <div class="row">
+      <div class="col-4">
+        <div id="responseCurrent" class="card text-white bg-dark mb-3"></div>
+      </div>
+      <div class="col-4">
+        <div class="card text-white bg-dark mb-3" id="responsePast"></div>
+      </div>
+      <div class="col-4">
+      <div id="responseFuture" class="card text-white bg-dark mb-3"></div>
+    </div>
     </div>
     <img class="img-fluid" src="./assets/images/animal.webp" alt="animals in space" />
 
