--- a/src/index.html
+++ b/src/index.html
@@ -12,24 +12,28 @@
   <div class="container">
     <img class="img-fluid text-center" id="solarSystem" src="./assets/images/solarSystem.jpg"
       alt="planets in solar sytem" />
-    <h1>How old are you really?</h1>
-    <h3>Let's see how old you would be based on other planet's solar years</h3>
-    <form id="age-form">
-      <label for="nameInput">Enter your name:</label>
-      <input id="nameInput" type="text" placeholder="Laika">
-      <br>
-      <label for="ageInput">Enter your age:</label>
-      <input id="ageInput" type="number">
-      <br>
-      <label for="agePast">Enter a past age to see how many birthdays have happened between then and now:</label>
-      <input id="agePast" type="number">
-      <br>
-      <label for="ageFuture">Enter a future age to see how many birthdays have yet to happen between then and
-        now:</label>
-      <input id="ageFuture" type="number">
-      <br>
-      <button type="submit" class="btn btn-primary">Blast off!</button>
-    </form>
+    <div class="text-center">
+      <h1>How old are you really?</h1>
+      <h3>Let's see how old you would be based on other planet's solar years</h3>
+    </div>
+    <div id="div-form">
+      <form id="age-form">
+        <label for="nameInput">Enter your name:</label>
+        <input id="nameInput" type="text" placeholder="Laika">
+        <br>
+        <label for="ageInput">Enter your age:</label>
+        <input id="ageInput" type="number">
+        <br>
+        <label for="agePast">Enter a past age to see how many birthdays have happened between then and now:</label>
+        <input id="agePast" type="number">
+        <br>
+        <label for="ageFuture">Enter a future age to see how many birthdays have yet to happen between then and
+          now:</label>
+        <input id="ageFuture" type="number">
+        <br>
+        <button type="submit" class="btn btn-primary">Blast off!</button>
+      </form>
+    </div>
     <div class="row">
       <div class="col-4">
         <div id="responseCurrent" class="card text-white bg-dark mb-3"></div>
@@ -38,8 +42,8 @@
         <div class="card text-white bg-dark mb-3" id="responsePast"></div>
       </div>
       <div class="col-4">
-      <div id="responseFuture" class="card text-white bg-dark mb-3"></div>
-    </div>
+        <div id="responseFuture" class="card text-white bg-dark mb-3"></div>
+      </div>
     </div>
     <img class="img-fluid" src="./assets/images/animal.webp" alt="animals in space" />
 
