add font icon to button

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/2bd6fd9e35.js" crossorigin="anonymous"></script>
   <title>Galactic Age Calculator</title>
 </head>
 
@@ -31,7 +32,7 @@
           now:</label>
         <input id="ageFuture" type="number">
         <br>
-        <button type="submit" class="btn btn-primary">Blast off!</button>
+        <button type="submit" class="btn btn-primary"><i class="fa-solid fa-rocket"></i>Blast off!</button>
       </form>
     </div>
     <div class="row">
