--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   <div class="container">
     <img class="img-fluid text-center" id="solarSystem" src="./assets/images/solarSystem.jpg"
       alt="planets in solar sytem" />
-    <div class="text-center">
+    <div class="text-center" id="intro">
       <h1>How old are you really?</h1>
       <h3>Let's see how old you would be based on other planet's solar years</h3>
     </div>
@@ -47,7 +47,6 @@
       </div>
     </div>
     <img class="img-fluid" src="./assets/images/animal.webp" alt="animals in space" />
-
   </div>
 </body>
 
