--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <div class="container">
-    <img class="img-fluid text-center" id="solarSystem" src="./assets/images/solarSystem.jpg"
+    <img class="img-fluid text-center" id="solarSystem" src="assets/images/solarSystem.jpg"
       alt="planets in solar sytem" />
     <div class="text-center" id="intro">
       <h1>How old are you really?</h1>
@@ -46,8 +46,8 @@
         <div id="responseFuture" class="card text-white bg-dark mb-3"></div>
       </div>
     </div>
-    <img class="img-fluid" src="./assets/images/animal.webp" alt="animals in space" />
+    <img class="img-fluid" src="53be299580c84ad058a3.webp" alt="animals in space" />
   </div>
-</body>
+<script defer src="bundle.js"></script></body>
 
 </html>
